API connections made (microsoft, embercli)

--- a/app/templates/org.hbs
+++ b/app/templates/org.hbs
@@ -1,5 +1,4 @@
 {{#link-to 'orgs'}} Back to list of orgs {{/link-to}}
 
-<h1> Facebook </h1>
-
+<h1> <img src={{model.avatar_url}} height="125" /> {{model.name}}  </h1>
 {{outlet}}
