Added API requests for issues and contributors

--- a/app/templates/org/repo.hbs
+++ b/app/templates/org/repo.hbs
@@ -1,4 +1,4 @@
-<h4> Watchman </h4>
+<h2> Repo: {{model.name}} </h2>
 
 <ul class="repo-nav">
     <li>{{#link-to 'org.repo.issues'}} ISSUES {{/link-to}}</li>
