--- a/app/templates/org/repo/contributors.hbs
+++ b/app/templates/org/repo/contributors.hbs
@@ -1,3 +1,12 @@
-{{outlet}}
+<h2> Contributors </h2>
 
-<p> Contributors </p>
+<ul>
+  {{#each model as |contributor|}}
+  <li>
+    <h3> {{contributor.login}} </h3>
+  </li>
+  {{/each}}
+</ul>
+
+
+{{outlet}}
