--- a/app/templates/org/repo/issues.hbs
+++ b/app/templates/org/repo/issues.hbs
@@ -1,3 +1,10 @@
-{{outlet}}
+<h2> Issues </h2>
 
-<p> Issues </p>
+{{#each model as |issue|}}
+  <ul>
+    <li>
+      {{issue.title}}
+    </li>
+  </ul>
+
+{{/each}}
