--- a/app/templates/components/github-org.hbs
+++ b/app/templates/components/github-org.hbs
@@ -1,4 +1,8 @@
+{{yield}}
+
 <li>
   <button {{action "add" name }}> Favorite </button>
   {{#link-to 'org.repos' name }} {{name}} {{/link-to}}
 </li>
+
+<br />
