--- a/app/templates/components/comment-form.hbs
+++ b/app/templates/components/comment-form.hbs
@@ -1,1 +1,6 @@
-{{yield}}
+<form {{action "submitComment" on="submit"}}>
+  <label>Comment:</label>
+  {{textarea value=comment}}
+
+  <input type="submit" value="Submit" />
+</form>
