--- a/app/templates/org/repos.hbs
+++ b/app/templates/org/repos.hbs
@@ -1,9 +1,1 @@
-<ul>
-  {{#each model as |repo|}}
-    {{github-repo name=repo.name
-    forks=repo.forks
-    watchers=repo.watchers}}
-  {{/each}}
-</ul>
-
-{{outlet}}
+the
